fixes glitch when section is collapsed

--- a/shortcodes/column/includes/page-builder-column-item/static/css/styles.css
+++ b/shortcodes/column/includes/page-builder-column-item/static/css/styles.css
@@ -75,7 +75,10 @@ body.rtl .pb-item-type-column > .panel .controls {
 }
 
 .builder-item.pb-item-column-collapsed > .pb-item-type-column > .builder-items {
-	display: none;
+	min-height: 0.001px;
+	height: 0.001px;
+	overflow: hidden; /* insted of display:none, prevents glitch when the second section is collapsed */
+	padding: 0;
 }
 
 /* end: collapsed */
