--- a/shortcodes/section/includes/page-builder-section-item/static/css/styles.css
+++ b/shortcodes/section/includes/page-builder-section-item/static/css/styles.css
@@ -14,7 +14,10 @@
 }
 
 .builder-item.pb-item-section-collapsed > .pb-item-type-column > .builder-items {
-	display: none;
+	min-height: 0.001px;
+	height: 0.001px;
+	overflow: hidden; /* insted of display:none, prevents glitch when the second section is collapsed */
+	padding: 0;
 }
 
 /* end: collapsed */
